[tool.poetry]
name = "music-band-name-generator"
version = "0.1.0"
description = "Homework for students. Package of files for start project"
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
